--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,6 @@
  * in the user manual at https://docs.gradle.org/5.5.1/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'mswp'
+rootProject.name = 'oc-matrix'
 
 
