I relasesed the matrix library 0.1.2 on maven repository.

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ repositories { // Use jcenter for resolving dependencies.
 }
 
 group = 'com.github.oc-soft'
-version = '0.1.0'
+version = '0.1.2'
 ext.pom = [
     description: 'kotlin matrix library',
     url: 'https://github.com/oc-soft/matrix-kt',
@@ -122,6 +122,8 @@ kotlin {
 
 signing {
     useGpgCmd()
+    sign publishing.publications.kotlinMultiplatform
+    sign publishing.publications.metadata
     sign publishing.publications.jvm
     sign publishing.publications.js
 }
@@ -164,6 +166,18 @@ publishing {
         }
     }
     publications {
+        kotlinMultiplatform {
+            setupPom(pom)
+            pom.name = "${project.name}"
+            artifact dokkaHtmlJar
+            artifact metadataSourcesJar
+        }
+
+        metadata {
+            setupPom(pom)
+            pom.name = "${project.name}-metadata"
+            artifact dokkaHtmlJar
+        }
 
         js {
             setupPom(pom)
